# zenavif

./: .gitignore  ACHIEVEMENT_UNLOCKED.md  AVIF_PARSE_MISSING_FEATURES.md  BISECT-HANDOFF.md  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  Cargo.toml.original.txt  Dockerfile.references  FEEDBACK.md  FINAL_SESSION_SUMMARY.md  HANDOFF.md  PERFORMANCE.md  PLAN.md  README.md  SESSION_SUMMARY.md  SIMD_OPTIMIZATIONS.md  TESTING.md  YUV_ANALYSIS.md  YUV_IMPLEMENTATION_COMPLETE.md  api-feedback.md  debug_simd  justfile
.github/workflows/: ci.yml  fuzz.yml  linku-corpus.yml  release.yml
benches/: decode_benchmark.rs  yuv_conversion_benchmark.rs  yuv_crate_comparison.rs
benchmarks/: avif_encode_fine_sweep_2026-04-16.tsv  avif_encode_sweep_2026-04-15.tsv
examples/: accuracy_check.rs  benchmark_autovec.rs  benchmark_simd.rs  compare_libavif.rs  corpus_test.rs  debug_accuracy.rs  debug_bounds.rs  debug_yuv_bilinear.rs  decode_avif.rs  encode_sweep.rs  extract_av1.rs  inspect_metadata.rs  inspect_pixels.rs  inspect_planes.rs  libyuv_benchmark.rs  retry_failures.rs  save_png.rs  simd_check.rs  test_real_avif.rs  test_yuv_bilinear.rs  verify_yuv_formula.rs  yuv_benchmark.rs  yuv_profile.rs
fuzz/: .gitignore  Cargo.toml  avif.dict
fuzz/artifacts/fuzz_decode/: crash-8ddf3dd1f0c7e32e742997b41f962981510fad45
fuzz/artifacts/fuzz_decode_animation/: crash-6fecf2008a93aaf4d53b97509a67fa5fcb523a73  oom-07b8533290414be54ff88e9c25415e5870653fc7  oom-64f78df26049933e33b2cee05697378720af85ea
fuzz/artifacts/fuzz_decode_limited/: oom-bd868d4c110e40d69a2509548228f9f69660a4e0
fuzz/artifacts/fuzz_probe/: oom-aa3662d9a2bdd92a8faca1f80ceb8a4b6b4ab192
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_decode_animation.rs  fuzz_decode_limited.rs  fuzz_probe.rs
fuzz/regression/fuzz_decode_limited/: crash-d59bcf148460f516c26540047b7bfeaaff421fab
scripts/: download-avif-test-vectors.sh  download-linku-samples.sh  generate-linku-references.sh  generate-references.sh
src/: chroma.rs  codec.rs  config.rs  convert.rs  decode_av1.rs  decoder.rs  decoder_managed.rs  detect.rs  encoder.rs  error.rs  image.rs  lib.rs  strip_convert.rs  yuv_convert.rs  yuv_convert_fast.rs  yuv_convert_libyuv.rs  yuv_convert_libyuv_16bit.rs  yuv_convert_libyuv_autovec.rs  yuv_convert_libyuv_simd.rs  zencodec.rs  zennode_defs.md  zennode_defs.rs  zenode_defs.rs
src/simd/: avg.rs  mod.rs
tests/: animation_decode.rs  differential_4k.rs  differential_comprehensive.rs  differential_svtav1.rs  encode_roundtrip.rs  fuzz_regression.rs  gainmap_decode.rs  gainmap_encode.rs  integration_corpus.rs  linku_corpus.rs  metadata_roundtrip.rs  parity_test.rs  pixel_verification.rs  test_yuv_accuracy.rs
