[package]
name = "zenavif"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
license = "AGPL-3.0-or-later"
description = "Pure Rust AVIF image codec powered by rav1d and zenravif"
categories = ["multimedia::images"]
keywords = ["avif", "decoder", "encoder", "av1", "image"]
repository = "https://github.com/imazen/zenavif"
documentation = "https://docs.rs/zenavif"
exclude = ["debug_simd", "Dockerfile.references", "Cross.toml", "scripts/", "tests/vectors/", "tests/zenavif-references/", "CLAUDE.md", "FEEDBACK.md"]

[dependencies]
# rav1d: C FFI-based decoder for asm feature (fastest)
rav1d = { version = "1.1.0", default-features = false, features = ["bitdepth_8", "bitdepth_16"], optional = true }
# rav1d-safe: 100% safe managed API decoder (no c-ffi feature!)
rav1d-safe = { version = "0.3.1", default-features = false, features = ["bitdepth_8", "bitdepth_16"] }
archmage = { version = "0.9.12", features = ["macros"] }
magetypes = "0.9.12"
safe_unaligned_simd = "0.2.5"
zenavif-parse = "0.4.0"
yuv = "0.8.12"
imgref = "1.12.0"
rgb = { version = "0.8.52", default-features = false, features = ["bytemuck"] }
enough = "0.4.2"
bytemuck = { version = "1.25.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }
whereat = "0.1.4"
log = "0.4.29"
# NOTE: ravif (zenravif) and svtav1 are unpublished path deps.
# For local encode development, add them to .cargo/config.toml:
#   [patch.crates-io]
#   zenravif = { path = "../ravif/ravif" }
# Then uncomment these lines:
# ravif = { package = "zenravif", version = "0.1.0", default-features = false, optional = true }
# svtav1 = { version = "0.1.0", optional = true }
zencodec = { version = "0.1.1" }
zenpixels = { version = "0.2.0", default-features = false, features = ["imgref", "rgb"] }
zenpixels-convert = { version = "0.2.0", default-features = false, features = ["rgb"] }
linear-srgb = "0.6.4"

[dev-dependencies]
archmage = { version = "0.9.12", features = ["std"] }
env_logger = { version = "0.11.10", default-features = false }
png = "0.18.0"
image = "0.25.10"
criterion = { version = "0.8.2", features = ["html_reports"] }
fast-ssim2 = "0.7.0"

[[bench]]
name = "decode_benchmark"
harness = false

[[bench]]
name = "yuv_conversion_benchmark"
harness = false
required-features = ["_dev"]

[[bench]]
name = "yuv_crate_comparison"
harness = false
required-features = ["_dev"]

[[example]]
name = "accuracy_check"
required-features = ["_dev"]

[[example]]
name = "benchmark_autovec"
required-features = ["_dev"]

[[example]]
name = "benchmark_simd"
required-features = ["_dev"]

[[example]]
name = "debug_accuracy"
required-features = ["_dev"]

[[example]]
name = "debug_yuv_bilinear"
required-features = ["_dev"]

[[example]]
name = "libyuv_benchmark"
required-features = ["_dev"]

[[example]]
name = "test_yuv_bilinear"
required-features = ["_dev"]

[[example]]
name = "verify_yuv_formula"
required-features = ["_dev"]

[[example]]
name = "yuv_benchmark"
required-features = ["_dev"]

[[example]]
name = "yuv_profile"
required-features = ["_dev"]

[features]
default = []
# Decode with hand-written assembly via C FFI (fastest, uses unsafe)
unsafe-asm = ["dep:rav1d", "rav1d/asm"]
# AVIF encoding via zenravif (pure Rust by default)
# NOTE: encode features require unpublished zenravif/svtav1 path deps.
# See comments in [dependencies] for local setup instructions.
encode = []
# Encoding with hand-written assembly (fastest, uses unsafe)
encode-asm = ["encode"]
# Encoding with multi-threading
encode-threading = ["encode"]
# Encoding with imazen/zenrav1e fork features (QM, VAQ, still-image tuning, lossless)
encode-imazen = ["encode"]
# Encoding with svtav1-rs backend (pure Rust SVT-AV1 port)
encode-svtav1 = ["encode"]
# Enable zencodec trait integration
zencodec = []
# Expose internal YUV conversion modules for profiling/debugging. Not public API.
_dev = []

