[package]
name = "zenavif-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
enough = "0.4"

[dependencies.zenavif]
path = ".."

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_probe"
path = "fuzz_targets/fuzz_probe.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_animation"
path = "fuzz_targets/fuzz_decode_animation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_decode_limited"
path = "fuzz_targets/fuzz_decode_limited.rs"
test = false
doc = false
bench = false
